# FediChess

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  netlify.toml  package-lock.json  package.json  render.yaml  tailwind.config.ts
.cursor/agents/: docs-sync.md  explorer.md  verifier.md
.cursor/commands/: add-component.md  add-route.md  debug-p2p.md  fix-lint.md  refactor-component.md  review-ui.md  run-tests.md  sync-protocol-docs.md
.cursor/rules/: conventions.mdc  fedichess-design.mdc  project-context.mdc  protocol-and-docs.mdc  stack.mdc
.github/workflows/: ci.yml  release.yml
app/: globals.css  layout.tsx
app/game/: page.tsx
app/lobby/: page.tsx
app/local/: page.tsx
app/settings/: page.tsx
components/: app-footer.tsx  error-boundary.tsx  theme-provider.tsx
components/game/: Chat.tsx  Timer.tsx  (+2 more)
documentation/: README.md  architecture.md  deployment-checks.md  protocol.md  ranking-api.md  releases.md  sdk-guide.md  structure.md
lib/: account-backup.ts  ble-transport.ts  chess-engine.ts  clipboard.ts  constants.ts  elo.ts  p2p.ts  pgn.ts  store.ts  transport-types.ts
public/: manifest.webmanifest
scripts/: changelog-for-version.cjs
sdks/: README.md
sdks/cpp/: CMakeLists.txt  README.md  fedichess_client.cpp  fedichess_client.hpp
sdks/cpp/examples/: lobby_and_challenge.cpp
sdks/python/: README.md  pyproject.toml
sdks/python/examples/: lobby_and_challenge.py
sdks/python/fedichess/: __init__.py  client.py
sdks/python/fedichess/examples/: lobby_and_challenge.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/examples/: lobby_and_challenge.rs
sdks/rust/src/: lib.rs
types/: web-bluetooth.d.ts
(+14 files in other folders)
