[package]
name = "fedichess-sdk"
version = "0.1.0"
edition = "2021"
description = "FediChess Rust SDK — P2P chess via the FediChess bridge"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[[example]]
name = "lobby_and_challenge"
path = "examples/lobby_and_challenge.rs"
